時刻クリアボタン追加 スマホでの絵文字の見え方を考慮

--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@
       <button id="confirmNoButton" class="btn">いいえ</button>
     </div>
   </div>
-
   <!-- 時刻入力モーダル -->
   <div id="timePickerModal" class="modal">
     <div class="modal-content">
@@ -193,6 +192,7 @@
       </div>
       <input id="timeInput" type="time" class="time-input">
       <button id="timePickerOkButton" class="btn">OK</button>
+      <button id="timePickerClearButton" class="btn">クリア</button> <!-- クリアボタンを追加 -->
     </div>
   </div>
 
