ボタンの不活性機能を追加 時計の短針を短く変更 スマホ時の崩れを一部修正

--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
       </div>
       <input id="timeInput" type="time" class="time-input">
       <button id="timePickerOkButton" class="btn">OK</button>
-      <button id="timePickerClearButton" class="btn">クリア</button> <!-- クリアボタンを追加 -->
+      <button id="timePickerClearButton" class="btn">クリア</button>
+      <button id="channelToggleButton" class="btn">チャンネル無し</button> <!-- 「チャンネル無し」ボタンを追加 -->
     </div>
   </div>
 
