アンドゥや登録処理のリファクタ ボタンを無効にする機能のバグ修正

--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
         <div class="area-title">テラガード</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonTerraguardPVP" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardPVP" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh1" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh1" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh2" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh2" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh3" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh3" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh4" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh4" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh5" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh5" class="btn log-btn">🐈</button></div>
         </div>
       </div>
 
@@ -59,27 +59,27 @@
         <div class="area-title">トゥリア</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonTuriaPVP" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaPVP" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh1" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh1" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh2" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh2" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh3" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh3" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh4" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh4" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh5" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh5" class="btn log-btn">🐈</button></div>
         </div>
       </div>
 
@@ -88,27 +88,27 @@
         <div class="area-title">アンゲロス</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonAngelosPVP" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosPVP" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh1" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh1" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh2" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh2" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh3" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh3" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh4" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh4" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh5" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh5" class="btn log-btn">🐈</button></div>
         </div>
       </div>
 
@@ -117,27 +117,27 @@
         <div class="area-title">フォントゥナス</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonFontunasPVP" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasPVP" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh1" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh1" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh2" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh2" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh3" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh3" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh4" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh4" class="btn log-btn">🐈</button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh5" class="btn log-btn">⚔️🐈⚔️</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh5" class="btn log-btn">🐈</button></div>
         </div>
       </div>
 
@@ -193,7 +193,7 @@
       <input id="timeInput" type="time" class="time-input">
       <button id="timePickerOkButton" class="btn">OK</button>
       <button id="timePickerClearButton" class="btn">クリア</button>
-      <button id="channelToggleButton" class="btn">チャンネル無し</button> <!-- 「チャンネル無し」ボタンを追加 -->
+      <button id="channelToggleButton" class="btn">ボタンを無効にする</button>
     </div>
   </div>
 
