タイムピッカーに閉じるボタンを追加

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
       <button id="timePickerOkButton" class="btn">OK</button>
       <button id="timePickerClearButton" class="btn">クリア</button>
       <button id="channelToggleButton" class="btn">ボタンを無効にする</button>
+      <!-- 閉じるボタンを追加 -->
+      <button id="timePickerModalCloseButton" class="modal-close-btn">×</button>
     </div>
   </div>
 
