--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
           <div class="log-label">ch5</div>
           <div class="log-button-container"><button id="logButtonTerraguardCh5" class="btn log-btn">🐈</button></div>
         </div>
+        <div class="log-row">
+          <div class="log-label">ch6</div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh6" class="btn log-btn">🐈</button></div>
+        </div>
       </div>
 
       <!-- トゥリア -->
@@ -80,6 +84,10 @@
         <div class="log-row">
           <div class="log-label">ch5</div>
           <div class="log-button-container"><button id="logButtonTuriaCh5" class="btn log-btn">🐈</button></div>
+        </div>
+        <div class="log-row">
+          <div class="log-label">ch6</div>
+          <div class="log-button-container"><button id="logButtonTuriaCh6" class="btn log-btn">🐈</button></div>
         </div>
       </div>
 
@@ -110,6 +118,10 @@
           <div class="log-label">ch5</div>
           <div class="log-button-container"><button id="logButtonAngelosCh5" class="btn log-btn">🐈</button></div>
         </div>
+        <div class="log-row">
+          <div class="log-label">ch6</div>
+          <div class="log-button-container"><button id="logButtonAngelosCh6" class="btn log-btn">🐈</button></div>
+        </div>
       </div>
 
       <!-- フォントゥナス -->
@@ -138,6 +150,10 @@
         <div class="log-row">
           <div class="log-label">ch5</div>
           <div class="log-button-container"><button id="logButtonFontunasCh5" class="btn log-btn">🐈</button></div>
+        </div>
+        <div class="log-row">
+          <div class="log-label">ch6</div>
+          <div class="log-button-container"><button id="logButtonFontunasCh6" class="btn log-btn">🐈</button></div>
         </div>
       </div>
 
