絵文字を廃止し、FontAwesomeを適用

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet">
+  <link href="./fontawesome/css/fontawesome.css" rel="stylesheet" />
+  <link href="./fontawesome/css/solid.css" rel="stylesheet" />
   <title>NEKO-KAN</title>
 </head>
 
@@ -12,8 +14,8 @@
   <!-- アプリケーションバー -->
   <div class="header">
     <div class="top-left-align">
-      <button id="resetButton" class="header-btn">🆑</button>
-      <button id="undoButton" class="header-btn">🔙</button>
+      <button id="resetButton" class="header-btn"><i class="fas fa-trash"></i></button>
+      <button id="undoButton" class="header-btn"><i class="fas fa-history"></i></button>
     </div>
     <div class="title">NEKO-KAN</div>
     <div class="top-right-align">
@@ -30,48 +32,48 @@
         <div class="area-title">テラガード</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonTerraguardPVP" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardPVP" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh1" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh1" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh2" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh2" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh3" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh3" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh4" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh4" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh5" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh5" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch6</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh6" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh6" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <!-- ch7～ch10: 初期は非表示 -->
         <div class="log-row" style="display:none;">
           <div class="log-label">ch7</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh7" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh7" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch8</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh8" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh8" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch9</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh9" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh9" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch10</div>
-          <div class="log-button-container"><button id="logButtonTerraguardCh10" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTerraguardCh10" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
       </div>
 
@@ -80,48 +82,48 @@
         <div class="area-title">トゥリア</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonTuriaPVP" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaPVP" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh1" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh1" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh2" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh2" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh3" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh3" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh4" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh4" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh5" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh5" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch6</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh6" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh6" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <!-- ch7～ch10: 初期は非表示 -->
         <div class="log-row" style="display:none;">
           <div class="log-label">ch7</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh7" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh7" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch8</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh8" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh8" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch9</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh9" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh9" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch10</div>
-          <div class="log-button-container"><button id="logButtonTuriaCh10" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonTuriaCh10" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
       </div>
 
@@ -130,48 +132,48 @@
         <div class="area-title">アンゲロス</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonAngelosPVP" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosPVP" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh1" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh1" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh2" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh2" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh3" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh3" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh4" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh4" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh5" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh5" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch6</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh6" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh6" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <!-- ch7～ch10: 初期は非表示 -->
         <div class="log-row" style="display:none;">
           <div class="log-label">ch7</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh7" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh7" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch8</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh8" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh8" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch9</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh9" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh9" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch10</div>
-          <div class="log-button-container"><button id="logButtonAngelosCh10" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonAngelosCh10" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
       </div>
 
@@ -180,48 +182,48 @@
         <div class="area-title">フォントゥナス</div>
         <div class="log-row">
           <div class="log-label">PVP</div>
-          <div class="log-button-container"><button id="logButtonFontunasPVP" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasPVP" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch1</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh1" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh1" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch2</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh2" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh2" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch3</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh3" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh3" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch4</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh4" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh4" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch5</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh5" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh5" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row">
           <div class="log-label">ch6</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh6" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh6" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <!-- ch7～ch10: 初期は非表示 -->
         <div class="log-row" style="display:none;">
           <div class="log-label">ch7</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh7" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh7" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch8</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh8" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh8" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch9</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh9" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh9" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
         <div class="log-row" style="display:none;">
           <div class="log-label">ch10</div>
-          <div class="log-button-container"><button id="logButtonFontunasCh10" class="btn log-btn">🐈</button></div>
+          <div class="log-button-container"><button id="logButtonFontunasCh10" class="btn log-btn"><i class="fas fa-cat"></i></button></div>
         </div>
       </div>
 
